Fix from PR#29290. Properly terminate the cpio_longopts struct so an unknown option doesn't run off the end and core dump